Börjat byggandet av thymeleaf tabellen

--- a/src/main/resources/templates/visaAvtalsKunder.html
+++ b/src/main/resources/templates/visaAvtalsKunder.html
@@ -55,27 +55,28 @@
                         <a th:href="1"><i class="fa-solid fa-arrow-down-z-a"></i></a>
                     </div>
                 </th>
-
+                <!-- TODO Search input + button här -->
             </tr>
             </thead>
             <tbody>
+            <!-- TODO Ta in den osorterade eller sorterade listan här, och generera rader -->
             <tr>
-                <td>Sika Sverige AB</td>
-                <td>Joakim Hansen</td>
-                <td>Stockholm</td>
-                <td>Sweden</td>
+                <td>Company 1</td>
+                <td>Contact 1</td>
+                <td>City 1</td>
+                <td>Country 1</td>
             </tr>
             <tr>
-                <td>Sika Sverige AB</td>
-                <td>Joakim Hansen</td>
-                <td>Stockholm</td>
-                <td>Sweden</td>
+                <td>Company 2</td>
+                <td>Contact 2</td>
+                <td>City 2</td>
+                <td>Country 2</td>
             </tr>
             <tr>
-                <td>Sika Sverige AB</td>
-                <td>Joakim Hansen</td>
-                <td>Stockholm</td>
-                <td>Sweden</td>
+                <td>Company 3</td>
+                <td>Contact 3</td>
+                <td>City 3</td>
+                <td>Country 3</td>
             </tr>
             </tbody>
         </table>
