added methods to customer

--- a/src/main/resources/templates/visaCompanyCustomerIndividual.html
+++ b/src/main/resources/templates/visaCompanyCustomerIndividual.html
@@ -14,7 +14,7 @@
 <div class="container">
     <nav class="navbar">
         <!-- Länk tillbaka till hela listan -->
-        <button class="navButton"><a th:href="@{/...}" >Gå tillbaka</a></button>
+        <button class="navButton"><a th:href="@{/company}" >Gå tillbaka</a></button>
     </nav>
     <h2>Företagskund</h2>
         <hr class="divider">
