--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,9 @@
     <h1>Välkommen till Pensionatet!</h1>
     <button class="button"><a th:href="@{/book}">Boka Vistelse</a></button>
     <button class="button"><a th:href="@{/kunder}">Hantera kunder och bokningar</a></button>
+    <button class="button"><a th:href="@{/company}">Visa avtalskunder</a></button>
+    <!-- TODO länk till blacklist -->
+    <!-- <button class="button"><a th:href="@{/...}">Hantera blacklist</a></button> -->
 </div>
 </body>
 </html>
