PUT (update) har skapats. Men "ok" uppdateras ej när man försäker ändra , kod 404 skrivs ut i BlackListServiveImp. Kan någon kolla upp?

--- a/src/main/resources/templates/visablkunder.html
+++ b/src/main/resources/templates/visablkunder.html
@@ -40,8 +40,8 @@
             </div>
             <div class="button-container">
 
-                <button class="navButton"><a th:href="@{/blacklist/editById/{id}(id=${blkund.email})}">Ändra</a></button>
-                <form th:action="@{/blacklist/deleteById/{id}(id=${blkund.email})}" method="post" onsubmit="return confirm('Är du säker på att du vill ta bort kunden?')">
+                <button class="navButton"><a th:href="@{/blacklist/editByemail/{id}(id=${blkund.email})}">Ändra</a></button>
+                <form th:action="@{/blacklist/deleteById/{id}(id=${blkund.id})}" method="post" onsubmit="return confirm('Är du säker på att du vill ta bort kunden?')">
                     <button class="navButton" type="submit">Ta bort kund</button>
                 </form>
             </div>
