--- a/src/main/resources/templates/visaAvtalsKunder.html
+++ b/src/main/resources/templates/visaAvtalsKunder.html
@@ -27,58 +27,48 @@
     <div class="room-container">
         <table class="customer-table">
             <thead>
-            <tr>
-                <th> Company
-                    <div class="header-flex">
-                        <a th:href="1"><i class="fa-solid fa-arrow-up-z-a"></i></a>
-                        <a th:href="1"><i class="fa-solid fa-arrow-down-z-a"></i></a>
-                    </div>
-                </th>
+            <th> Fax
+                <div class="header-flex">
+                    <a th:href="@{/company/customers(sort='fax',order='asc')}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
+                    <a th:href="@{/company/customers(sort='fax',order='desc')}"><i class="fa-solid fa-arrow-down-z-a"></i></a>
+                </div>
+            </th>
+            <th> Company
+                <div class="header-flex">
+                    <a th:href="@{/company/customers(sort='companyName',order='asc')}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
+                    <a th:href="@{/company/customers(sort='companyName',order='desc')}"><i class="fa-solid fa-arrow-down-z-a"></i></a>
+                </div>
+            </th>
 
-                <th>Contact
-                    <div class="header-flex">
-                        <a th:href="1"><i class="fa-solid fa-arrow-up-z-a"></i></a>
-                        <a th:href="1"><i class="fa-solid fa-arrow-down-z-a"></i></a>
-                    </div>
-                </th>
+            <th>Contact
+                <div class="header-flex">
+                    <a th:href="@{/company/customers(sort='contactName',order='asc')}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
+                    <a th:href="@{/company/customers(sort='contactName',order='desc')}"><i class="fa-solid fa-arrow-down-z-a"></i></a>
+                </div>
+            </th>
 
-                <th>City
-                    <div class="header-flex">
-                        <a th:href="1"><i class="fa-solid fa-arrow-up-z-a"></i></a>
-                        <a th:href="1"><i class="fa-solid fa-arrow-down-z-a"></i></a>
-                    </div>
-                </th>
+            <th>Country
+                <div class="header-flex">
+                    <a th:href="@{/company/customers(sort='city',order='asc')}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
+                    <a th:href="@{/company/customers(sort='city',order='desc')}"><i class="fa-solid fa-arrow-down-z-a"></i></a>
+                </div>
+            </th>
 
-                <th>Country
-                    <div class="header-flex">
-                        <a th:href="1"><i class="fa-solid fa-arrow-up-z-a"></i></a>
-                        <a th:href="1"><i class="fa-solid fa-arrow-down-z-a"></i></a>
-                    </div>
-                </th>
-                <!-- TODO Search input + button här -->
-            </tr>
+
             </thead>
             <tbody>
-            <!-- TODO Ta in den osorterade eller sorterade listan här, och generera rader -->
-            <tr>
-                <td>Company 1</td>
-                <td>Contact 1</td>
-                <td>City 1</td>
-                <td>Country 1</td>
-            </tr>
-            <tr>
-                <td>Company 2</td>
-                <td>Contact 2</td>
-                <td>City 2</td>
-                <td>Country 2</td>
-            </tr>
-            <tr>
-                <td>Company 3</td>
-                <td>Contact 3</td>
-                <td>City 3</td>
-                <td>Country 3</td>
+            <tr th:each="customer : ${allCustomers}">
+                <td>
+                    <a th:href="@{/company/customers/{id}(id=${customer.id})}">
+                        <span th:text="${customer.fax}">Fax</span>
+                    </a>
+                </td>
+                <td th:text="${customer.companyName}">Company Name</td>
+                <td th:text="${customer.contactName}">Contact Name</td>
+                <td th:text="${customer.country}">Country</td>
             </tr>
             </tbody>
+
         </table>
     </div>
 </div>
