--- a/src/main/resources/templates/visaAvtalsKunder.html
+++ b/src/main/resources/templates/visaAvtalsKunder.html
@@ -16,40 +16,46 @@
     </nav>
     <h2 class="text-align-center">Alla registrerade avtals-kunder</h2>
     <hr class="divider">
+
+    <form th:action="@{/company/search}" method="get">
+        <input type="text" name="searchWord" placeholder="Sök efter kunder">
+        <button type="submit">Sök</button>
+    </form>
+
     <div class="room-container">
         <table class="customer-table">
             <thead>
             <th> Fax
                 <div class="header-flex">
-                    <a th:href="@{/company?sortField=fax&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
-                    <a th:href="@{/company?sortField=fax&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-down-z-a"></i></a>
+                    <a th:href="@{/company?sortField=fax&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
+                    <a th:href="@{/company?sortField=fax&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
                 </div>
             </th>
             <th> Company
                 <div class="header-flex">
-                    <a th:href="@{/company?sortField=companyName&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
-                    <a th:href="@{/company?sortField=companyName&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-down-z-a"></i></a>
+                    <a th:href="@{/company?sortField=companyName&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
+                    <a th:href="@{/company?sortField=companyName&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
                 </div>
             </th>
 
             <th>Contact
                 <div class="header-flex">
-                    <a th:href="@{/company?sortField=contactName&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
-                    <a th:href="@{/company?sortField=contactName&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-down-z-a"></i></a>
+                    <a th:href="@{/company?sortField=contactName&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
+                    <a th:href="@{/company?sortField=contactName&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
                 </div>
             </th>
 
             <th>City
                 <div class="header-flex">
-                    <a th:href="@{/company?sortField=city&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
-                    <a th:href="@{/company?sortField=city&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-down-z-a"></i></a>
+                    <a th:href="@{/company?sortField=city&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
+                    <a th:href="@{/company?sortField=city&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
                 </div>
             </th>
 
             <th>Country
                 <div class="header-flex">
-                    <a th:href="@{/company?sortField=country&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
-                    <a th:href="@{/company?sortField=country&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-down-z-a"></i></a>
+                    <a th:href="@{/company?sortField=country&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
+                    <a th:href="@{/company?sortField=country&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
                 </div>
             </th>
             </thead>
