--- a/src/main/resources/templates/visaAvtalsKunder.html
+++ b/src/main/resources/templates/visaAvtalsKunder.html
@@ -27,35 +27,32 @@
             <thead>
             <th> Fax
                 <div class="header-flex">
-                    <a th:href="@{/company?sortField=fax&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
-                    <a th:href="@{/company?sortField=fax&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
+                    <a th:href="@{/company(sortField='fax',sortOrder='asc')}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
+                    <a th:href="@{/company(sortField='fax',sortOrder='desc')}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
                 </div>
             </th>
             <th> Company
                 <div class="header-flex">
-                    <a th:href="@{/company?sortField=companyName&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
-                    <a th:href="@{/company?sortField=companyName&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
+                    <a th:href="@{/company(sortField='companyName',sortOrder='asc')}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
+                    <a th:href="@{/company(sortField='companyName',sortOrder='desc')}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
                 </div>
             </th>
-
             <th>Contact
                 <div class="header-flex">
-                    <a th:href="@{/company?sortField=contactName&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
-                    <a th:href="@{/company?sortField=contactName&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
+                    <a th:href="@{/company(sortField='contactName',sortOrder='asc')}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
+                    <a th:href="@{/company(sortField='contactName',sortOrder='desc')}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
                 </div>
             </th>
-
             <th>City
                 <div class="header-flex">
-                    <a th:href="@{/company?sortField=city&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
-                    <a th:href="@{/company?sortField=city&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
+                    <a th:href="@{/company(sortField='city',sortOrder='asc')}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
+                    <a th:href="@{/company(sortField='city',sortOrder='desc')}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
                 </div>
             </th>
-
             <th>Country
                 <div class="header-flex">
-                    <a th:href="@{/company?sortField=country&amp;sortOrder=asc}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
-                    <a th:href="@{/company?sortField=country&amp;sortOrder=desc}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
+                    <a th:href="@{/company(sortField='country',sortOrder='asc')}"><i class="fa-solid fa-arrow-down-a-z"></i></a>
+                    <a th:href="@{/company(sortField='country',sortOrder='desc')}"><i class="fa-solid fa-arrow-up-z-a"></i></a>
                 </div>
             </th>
             </thead>
