--- a/src/main/resources/templates/visaAvtalsKunder.html
+++ b/src/main/resources/templates/visaAvtalsKunder.html
@@ -56,8 +56,9 @@
                 </div>
             </th>
             </thead>
+
             <tbody>
-            <tr th:each="customer : ${allCustomers}">
+            <tr th:each="customer : ${clientsPage.content}">
                 <td>
                     <a th:href="@{/company/customers/{id}(id=${customer.id})}">
                         <span th:text="${customer.fax}">Fax</span>
@@ -69,7 +70,28 @@
                 <td th:text="${customer.country}">Country</td>
             </tr>
             </tbody>
+
         </table>
+    </div>
+    <div class="pagination">
+        <span>Page <strong th:text="${clientsPage.number + 1}"></strong>
+            of
+            <strong th:text="${clientsPage.totalPages}"></strong>
+        </span>
+
+        <span th:if="${clientsPage.hasPrevious()}">
+        <a th:href="@{${'/company?page=' + (clientsPage.number) + '&size=' + clientsPage.size + '&sort=' + sortField + ',' + sortOrder}}">Previous</a>
+    </span>
+
+        <span th:each="pageNum : ${#numbers.sequence(1, clientsPage.totalPages)}">
+        <a th:href="@{${'/company?page=' + pageNum + '&size=' + clientsPage.size + '&sort=' + sortField + ',' + sortOrder}}">
+            <button th:text="${pageNum}" th:class="${pageNum == clientsPage.number + 1 ? 'active' : ''}"></button>
+        </a>
+    </span>
+
+        <span th:if="${clientsPage.hasNext()}">
+        <a th:href="@{${'/company?page=' + (clientsPage.number + 2) + '&size=' + clientsPage.size + '&sort=' + sortField + ',' + sortOrder}}">Next</a>
+    </span>
     </div>
 </div>
 </body>
