--- a/src/main/resources/templates/updateblkund.html
+++ b/src/main/resources/templates/updateblkund.html
@@ -16,19 +16,22 @@
     <h2>Uppdatera kundstatus i blacklist</h2>
     <form action="#" th:action="@{/blacklist/update}" th:object="${updateblkund}" method="post">
         <label for="name">Name:  </label>
-        <input type="text" id="name" name="name" th:field="*{name}" th:disabled ><br>
+        <input type="text" id="name" name="name" th:field="*{name}"><br>
 
         <label for="email">E-post:</label>
-        <input type="email" id="email" name="email" th:field="*{email} " th:disabled><br>
+        <input type="email" id="email" name="email" th:field="*{email}"><br>
+
+        <label for="group">Group:</label>
+        <input type="text" id="group" name="group" th:field="*{group}"><br>
 
         <label for="ok">Blacklisted?: </label>
-        <input type="text" id="ok" name="ok" th:field="*{ok}" th:disabled>
+        <input type="checkbox" id="ok" name="ok" th:field="*{ok}"><br>
 
         <input type="hidden" id="id" name="id" th:field="*{id}" >
         <p class="error" th:name="felmeddelande" th:text="${felmeddelande}"></p>
 
         <br><br>
-        <input type="submit" value="Ändra ok status">
+        <input type="submit" value="Ändra kundinfo">
     </form>
 </div>
 </body>
