--- a/src/main/resources/templates/visablkunder.html
+++ b/src/main/resources/templates/visablkunder.html
@@ -38,12 +38,8 @@
             <div class="text-container">
                 <p th:text="${blkund.email}"  ></p>
             </div>
-            <div class="button-container">
-
+            <div class="button-container" style="margin-right: 10px;">
                 <button class="navButton"><a th:href="@{/blacklist/editByemail/{id}(id=${blkund.email})}">Ändra</a></button>
-                <form th:action="@{/blacklist/deleteById/{id}(id=${blkund.id})}" method="post" onsubmit="return confirm('Är du säker på att du vill ta bort kunden?')">
-                    <button class="navButton" type="submit">Ta bort kund</button>
-                </form>
             </div>
         </div>
     </div>
