--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,6 +21,7 @@
     <button class="button"><a th:href="@{/kunder}">Hantera kunder och bokningar</a></button>
     <button class="button"><a th:href="@{/company}">Visa avtalskunder</a></button>
     <button class="button"><a th:href="@{/blacklist}">Hantera blacklist</a></button>
+    <button class="button"><a th:href="@{/}">Rum events</a></button>
 </div>
 </body>
 </html>
