Booking price now shown

--- a/src/main/resources/templates/bookingDetails.html
+++ b/src/main/resources/templates/bookingDetails.html
@@ -20,6 +20,7 @@
     <p>Från: <span th:text="${booking.startdatum}"></span></p>
     <p>Till: <span th:text="${booking.slutdatum}"></span></p>
     <p>Sängplatser: <span th:text="${booking.numOfBeds}"></span></p>
+    <p>Pris: <span th:text="${bookingPris}"></span></p>
     <hr class="divider">
     <h2>Gäst information</h2>
     <hr class="divider">
