--- a/src/main/resources/templates/rumListofEvents.html
+++ b/src/main/resources/templates/rumListofEvents.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kund togs bort</title>
+  <title>All Rooms</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1>Rum Events</h1>
-<table border="1">
-  <thead>
-  <tr>
-    <th>ID</th>
-    <th>Rum ID</th>
-    <th>Date</th>
-    <th>Event Text</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="event : ${rumEvents}">
-    <td th:text="${event.id}"></td>
-    <td th:text="${event.rum.id}"></td>
-    <td th:text="${event.datum}"></td>
-    <td th:text="${event.eventText}"></td>
-  </tr>
-  </tbody>
-</table>
-
+<div class="container">
+  <nav class="navbar">
+    <button class="navButton"><a th:href="@{/index}" >Home</a> </button>
+  </nav>
+  <h1>Room events</h1>
+  <table>
+    <thead>
+    <tr>
+      <th>Rum nummer</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="room : ${allRum}">
+      <td th:text="'Room ' + ${room.rumsnr}"></td>
+    </tr>
+    </tbody>
+  </table>
+</div>
 </body>
 </html>
