--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -292,6 +292,7 @@ table a:visited{
     font-size: 16px;
     border-radius: 5px;
     transition: background-color 0.3s;
+    outline: grey;
 }
 
 .roomButton:hover {
