--- a/src/main/resources/templates/visaAvtalsKunder.html
+++ b/src/main/resources/templates/visaAvtalsKunder.html
@@ -16,12 +16,10 @@
     </nav>
     <h2 class="text-align-center">Alla registrerade avtals-kunder</h2>
     <hr class="divider">
-
     <form th:action="@{/company/search}" method="get">
         <input type="text" name="searchWord" placeholder="Sök efter kunder">
         <button type="submit">Sök</button>
     </form>
-
     <div class="room-container">
         <table class="customer-table">
             <thead>
@@ -74,24 +72,18 @@
         </table>
     </div>
     <div class="pagination">
-        <span>Page <strong th:text="${clientsPage.number + 1}"></strong>
-            of
-            <strong th:text="${clientsPage.totalPages}"></strong>
-        </span>
-
+        <span>Page <strong th:text="${clientsPage.number + 1}"></strong> of <strong th:text="${clientsPage.totalPages}"></strong></span>
         <span th:if="${clientsPage.hasPrevious()}">
-        <a th:href="@{${'/company?page=' + (clientsPage.number) + '&size=' + clientsPage.size + '&sort=' + sortField + ',' + sortOrder}}">Previous</a>
-    </span>
-
+            <a th:href="@{${'/company?page=' + (clientsPage.number) + '&size=' + clientsPage.size + '&sortField=' + sortField + '&sortOrder=' + sortOrder + '&searchWord=' + searchWord}}">Previous</a>
+        </span>
         <span th:each="pageNum : ${#numbers.sequence(1, clientsPage.totalPages)}">
-        <a th:href="@{${'/company?page=' + pageNum + '&size=' + clientsPage.size + '&sort=' + sortField + ',' + sortOrder}}">
-            <button th:text="${pageNum}" th:class="${pageNum == clientsPage.number + 1 ? 'active' : ''}"></button>
-        </a>
-    </span>
-
+            <a th:href="@{${'/company?page=' + pageNum + '&size=' + clientsPage.size + '&sortField=' + sortField + '&sortOrder=' + sortOrder + '&searchWord=' + searchWord}}">
+                <button th:text="${pageNum}" th:class="${pageNum == clientsPage.number + 1 ? 'active' : ''}"></button>
+            </a>
+        </span>
         <span th:if="${clientsPage.hasNext()}">
-        <a th:href="@{${'/company?page=' + (clientsPage.number + 2) + '&size=' + clientsPage.size + '&sort=' + sortField + ',' + sortOrder}}">Next</a>
-    </span>
+            <a th:href="@{${'/company?page=' + (clientsPage.number + 2) + '&size=' + clientsPage.size + '&sortField=' + sortField + '&sortOrder=' + sortOrder + '&searchWord=' + searchWord}}">Next</a>
+        </span>
     </div>
 </div>
 </body>
