--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,3 +25,11 @@
 </div>
 </body>
 </html>
+
+<!--<div class="indexContainer">-->
+<!--    <button class="button"><a th:href="@{/book}">Boka Vistelse</a></button>-->
+<!--    <button class="button"><a th:href="@{/kunder}">Hantera kunder och bokningar</a></button>-->
+<!--    <button class="button"><a th:href="@{/company}">Visa avtalskunder</a></button>-->
+<!--    <button class="button"><a th:href="@{/blacklist}">Hantera blacklist</a></button>-->
+<!--    <button class="button"><a th:href="@{/rum/allRooms}">Rum events</a></button>-->
+<!--</div>-->
