--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,8 @@
     <button class="button"><a th:href="@{/company}">Visa avtalskunder</a></button>
     <button class="button"><a th:href="@{/blacklist}">Hantera blacklist</a></button>
     <button class="button"><a th:href="@{/rum/allRooms}">Rum events</a></button>
+    <button class="button"><a th:href="@{/login}">Login</a></button>
+    <button class="button"><a th:href="@{/logout}">Log out</a></button>
 </div>
 </body>
 </html>
