login och konto updateringar

--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Manage Users</title>
+    <meta charset="UTF-8">
+    <title>Hantera konton</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+    <style>
+        .container{
+            width: fit-content;
+        }
+    </style>
 </head>
 <body>
-<h1>Manage Users</h1>
-<a th:href="@{/admin/users/add}">Add User</a>
-<table>
-    <thead>
-    <tr>
-        <th>Username</th>
-        <th>Email</th>
-        <th>Roles</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user : ${users}">
-        <td th:text="${user.username}"></td>
-        <td th:text="${user.email}"></td>
-        <td th:text="${#lists.join(user.roles, ', ')}"></td>
-        <td>
-            <a th:href="@{/admin/users/edit/{id}(id=${user.id})}">Edit</a>
-            <a th:href="@{/admin/users/delete/{id}(id=${user.id})}">Delete</a>
-        </td>
-    </tr>
-    </tbody>
-</table>
+<div class="container">
+    <nav class="navbar">
+        <button class="navButton"><a th:href="@{/index}" >Home</a></button>
+    </nav>
+    <div>
+        <h2 class="text-align-center">Hantera konton</h2>
+        <hr class="divider">
+        <table class="customer-table">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Användarnamn</th>
+                <th>Email</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="user : ${users}">
+                <td th:text="${user.id}">ID</td>
+                <td th:text="${user.username}">Username</td>
+                <td th:text="${user.email}">Email</td>
+                <td>
+                    <a th:href="@{/admin/users/edit/{id}(id=${user.id})}">Ändra</a>
+                    <a th:href="@{/admin/users/delete/{id}(id=${user.id})}" onclick="return confirm('Är du säker på att du vill ta bort användare?')">Ta bort</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <button class="book-button mt-10"><a th:href="@{/admin/users/add}">Lägg till konto</a></button>
+    </div>
+</div>
 </body>
 </html>
