--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,6 +36,7 @@
     <button class="button"><a th:href="@{/company}">Visa avtalskunder</a></button>
     <button class="button"><a th:href="@{/blacklist}">Hantera blacklist</a></button>
     <button class="button"><a th:href="@{/rum/allRooms}">Rum events</a></button>
+    <button class="button"><a th:href="@{/admin/users}">Ändra/skapa konton</a></button>
 </div>
 </body>
 </html>
