--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,24 +1,97 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+    <style>
+        .login-form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .form-group {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 15px;
+        }
+
+        .form-group label {
+            width: 150px;
+            text-align: right;
+            margin-right: 10px;
+        }
+
+        .form-group input {
+            width: 300px;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+
+        .form-group button {
+            width: 150px;
+            padding: 8px;
+            box-sizing: border-box;
+            margin-top: 15px;
+        }
+
+        .links {
+            display: flex;
+            justify-content: center;
+            margin-top: 15px;
+        }
+
+        .links a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .links a:hover {
+            text-decoration: underline;
+        }
+
+        .text-align-center {
+            text-align: center;
+        }
+
+        .divider {
+            margin: 20px 0;
+        }
+    </style>
 </head>
 <body>
-<h1>Login</h1>
-<form th:action="@{/login}" method="post">
+<div class="container">
+    <nav class="navbar">
+        <button class="navButton"><a th:href="@{/index}">Home</a></button>
+    </nav>
     <div>
-        <label>Username:</label>
-        <input type="text" name="username" />
+        <h2 class="text-align-center">Logga in</h2>
+        <hr class="divider">
+        <form th:action="@{/login}" method="post" class="login-form">
+            <div class="form-group">
+                <label for="username">Användarnamn:</label>
+                <input type="text" id="username" name="username" required/>
+            </div>
+            <div class="form-group">
+                <label for="password">Lösenord:</label>
+                <input type="password" id="password" name="password" required/>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="book-button">Logga in</button>
+            </div>
+        </form>
+        <div class="links">
+            <a th:href="@{/register}">Registrera</a>
+            <a th:href="@{/forgot-password}">Glömt lösenord</a>
+        </div>
     </div>
-    <div>
-        <label>Password:</label>
-        <input type="password" name="password" />
-    </div>
-    <div>
-        <button type="submit">Login</button>
-    </div>
-</form>
-<a th:href="@{/register}">Register</a>
-<a th:href="@{/forgot-password}">Forgot Password</a>
+</div>
 </body>
 </html>
