--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -1,19 +1,83 @@
-
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <title>Glömt lösenord</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+    <style>
+        .login-form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .form-group {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 15px;
+        }
+
+        .form-group label {
+            width: 150px;
+            text-align: right;
+            margin-right: 10px;
+        }
+
+        .form-group input {
+            width: 300px;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+
+        .form-group button {
+            width: 150px;
+            padding: 8px;
+            box-sizing: border-box;
+            margin-top: 15px;
+        }
+
+        .links a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .links a:hover {
+            text-decoration: underline;
+        }
+
+        .text-align-center {
+            text-align: center;
+        }
+
+        .divider {
+            margin: 20px 0;
+        }
+    </style>
 </head>
 <body>
-<h1>Glömt lösenord</h1>
-<form th:action="@{/forgot-password}" method="post">
+<div class="container">
+    <nav class="navbar">
+        <button class="navButton"><a th:href="@{/index}">Home</a></button>
+    </nav>
     <div>
-        <label>Email:</label>
-        <input type="email" name="email" />
+        <h2 class="text-align-center">Glömt lösenord</h2>
+        <hr class="divider">
+        <form th:action="@{/forgot-password}" method="post" class="login-form">
+            <div class="form-group">
+                <label>Email:</label>
+                <input type="email" name="email" />
+            </div>
+            <div class="form-group">
+                <button type="submit" class="book-button">Submit</button>
+            </div>
+        </form>
     </div>
-    <div>
-        <button type="submit">Submit</button>
-    </div>
-</form>
+</div>
 </body>
 </html>
