--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,13 +23,12 @@
 </style>
 </head>
 <body>
-
 <div class="container">
     <nav class="navbar">
         <button class="navButton"><a th:href="@{/index}" >Home</a> </button>
 
         <div class="myButtons">
-            <div th:if="${#authorization.expression('isAuthenticated()')}">
+            <div th:if="${#authorization.expression('isAuthenticated()')}" onclick="return confirm('Är du säker på att du vill logga ut?')">
                 <button class="navButton"><a th:href="@{/logout}">Log out</a></button>
             </div>
             <div th:if="${#authorization.expression('isAnonymous()')}">
