--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -64,6 +64,11 @@
         .divider {
             margin: 20px 0;
         }
+        .errorMmessage {
+            color: red;
+            text-align: center;
+            margin-bottom: 15px;
+        }
     </style>
 </head>
 <body>
@@ -82,6 +87,9 @@
             <div class="form-group">
                 <label for="password">Lösenord:</label>
                 <input type="password" id="password" name="password" required/>
+            </div>
+            <div th:if="${param.error}" class="errorMmessage">
+                Användarnamn eller lösenord är felaktigt. Försök igen.
             </div>
             <div class="form-group">
                 <button type="submit" class="book-button">Logga in</button>
