added delete user

--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -36,7 +36,10 @@
                 <td th:text="${user.email}">Email</td>
                 <td>
                     <a th:href="@{/admin/users/edit/{id}(id=${user.id})}">Ändra</a>
-                    <a th:href="@{/admin/users/delete/{id}(id=${user.id})}" onclick="return confirm('Är du säker på att du vill ta bort användare?')">Ta bort</a>
+<!--                    <a th:href="@{/admin/deleteUser/{id}(id=${user.id})}" onclick="return confirm('Är du säker på att du vill ta bort användare?')">Ta bort</a>-->
+                    <form th:action="@{/admin/deleteUser/{id}(id=${user.id})}" method="post" style="display:inline;">
+                        <button type="submit" onclick="return confirm('Är du säker på att du vill ta bort användaren?')">Delete</button>
+                    </form>
                 </td>
             </tr>
             </tbody>
