--- a/src/main/resources/templates/admin/edituser.html
+++ b/src/main/resources/templates/admin/edituser.html
@@ -21,16 +21,16 @@
     <div>
         <h2 class="text-align-center">Uppdatera användare</h2>
         <hr class="divider">
-        <form action="#" th:action="@{/admin/update}" th:object="${editUser}" method="post">
+        <form action="#" th:action="@{/admin/update}" th:object="${user}" method="post">
             <label for="username">Användarnamn:  </label>
-            <input type="text" id="username" name="username" th:field="*{user.username}" ><br>
+            <input type="text" id="username" name="username" th:field="*{username}" ><br>
 
             <label for="email">E-post:</label>
-            <input type="email" id="email" name="email" th:field="*{user.email}"><br>
+            <input type="email" id="email" name="email" th:field="*{email}"><br>
 
             <label for="password">Lösenord: </label>
-            <input type="text" id="password" name="password" th:field="*{user.password}">
-            <input type="hidden" id="id" name="id" th:field="*{user.id}">
+            <input type="text" id="password" name="password" th:field="*{password}">
+            <input type="hidden" id="id" name="id" th:field="*{id}">
             <p class="error" th:name="felmeddelande" th:text="${felmeddelande}"></p>
 
             <br><br>
