--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -77,6 +77,7 @@
                 <button type="submit" class="book-button">Submit</button>
             </div>
         </form>
+        <p th:text="${message}"></p>
     </div>
 </div>
 </body>
