forget-password klar = lösenord ändras i databasen (men kan inte logga in ???)

--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -78,6 +78,7 @@
                 <button type="submit" class="book-button">Återställ</button>
             </div>
         </form>
+        <p th:text="${message}"></p>
     </div>
 </div>
 </body>
