Label now on side of checkboxes

--- a/src/main/resources/static/style2.css
+++ b/src/main/resources/static/style2.css
@@ -465,7 +465,14 @@ form button[type="submit"]:hover {
 }
 
 .checkbox-form {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
