--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -58,12 +58,12 @@
             <label for="email">Email:</label>
             <input type="email" name="email" id="email">
             <label for="role-form">Roller:</label>
-            <form id="role-form">
+            <div id="role-form" class="checkbox-form">
                 <input type="checkbox" name="admin" id="admin">
                 <label for="admin">Admin </label><br>
                 <input type="checkbox" name="receptionist" id="receptionist">
                 <label for="receptionist">Receptionist </label>
-            </form>
+            </div>
             <button class="navButton" type="submit">Lägg till användare</button>
         </form>
     </div>
