Can now add a user which can be logged in (Can't delete new user yet)

--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -50,8 +50,8 @@
     </div>
     <div class="userform-container" th:if="${addUser}">
         <h3>Lägg till användare</h3>
-        <form class="form-container"><!--action="#" th:action="@{/admin/users}" method="post"-->
-            <label for="username">Namn:</label>
+        <form class="form-container" action="#" th:action="@{/admin/users/adduser}" method="post">
+            <label for="username">Användarnamn:</label>
             <input type="text" name="username" id="username">
             <label for="password">Lösenord:</label>
             <input type="password" name="password" id="password">
@@ -59,9 +59,9 @@
             <input type="email" name="email" id="email">
             <label for="role-form">Roller:</label>
             <div id="role-form" class="checkbox-form">
-                <input type="checkbox" name="admin" id="admin">
+                <input type="checkbox" name="roles" id="admin" value="ADMIN">
                 <label for="admin">Admin </label><br>
-                <input type="checkbox" name="receptionist" id="receptionist">
+                <input type="checkbox" name="roles" id="receptionist" value="RECEPTIONIST">
                 <label for="receptionist">Receptionist </label>
             </div>
             <button class="navButton" type="submit">Lägg till användare</button>
